df-derive/tests/fail/126-fail-time-unit-on-tuple.stderr
error: field `pair` has `time_unit = "..."` but its type is a tuple; field-level attributes do not apply to multi-column tuple fields. Hoist the tuple into a named struct that derives `ToDataFrame` if you need per-element attributes.
 --> tests/fail/126-fail-time-unit-on-tuple.rs:7:5
  |
7 | /     #[df_derive(time_unit = "us")]
8 | |     pair: (chrono::DateTime<chrono::Utc>, String),
  | |_________________________________________________^
